posiGen_FullsendBox/src/objects/Projected_Savings_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Month_Bill_Dollars__c</fullName>
        <label>Month Bill Dollars</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Bill_Usage_kWh__c</fullName>
        <label>Month Bill Usage kWh</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_EU_Projected_Electrical_Savings__c</fullName>
        <label>Month EU Projected Electrical Savings $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_EU_Projected_Electrical_kWh_Saving__c</fullName>
        <label>Month EU Projected Electrical kWh Saving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_EU_Projected_NatGas_Therms_Savings__c</fullName>
        <label>Month EU Projected NatGas Therms Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_EU_Projected_Nat_Gas_Savings__c</fullName>
        <label>Month EU Projected Nat Gas Savings $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Production_kWh__c</fullName>
        <label>Month Production kWh</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Projected__c</fullName>
        <label>Month Projected</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Savings_Dollars__c</fullName>
        <label>Month Savings Dollars</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_Solar_Radiation__c</fullName>
        <description>Solar Radiation kWh/m^2/day</description>
        <label>Month Solar Radiation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_Month_Projected__c</fullName>
        <formula>CASE( Month_Projected__c , 
  &quot;January&quot;, 1, 
  &quot;February&quot;, 2, 
  &quot;March&quot;, 3, 
  &quot;April&quot;, 4, 
  &quot;May&quot;, 5, 
  &quot;June&quot;, 6, 
  &quot;July&quot;, 7, 
  &quot;August&quot;, 8, 
  &quot;September&quot;, 9, 
  &quot;October&quot;, 10, 
  &quot;November&quot;, 11, 
  12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Month Projected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Savings__c</fullName>
        <label>Projected Savings</label>
        <referenceTo>Projected_Savings__c</referenceTo>
        <relationshipLabel>Projected Savings Line Items</relationshipLabel>
        <relationshipName>Projected_Savings_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Projected Savings Line Item</label>
    <nameField>
        <label>Projected Savings Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected Savings Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>